force-app/main/default/objects/Collateral__c/Collateral__c.object-meta.xml
<CustomObject>
    <label>Collateral</label>
    <nameField>
        <displayFormat>Collateral-{0000}</displayFormat>
        <label>Collateral Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Collaterals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>