force-app/main/default/objects/Collateral__c/fields/Collateral_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Collateral_Full_Name__c</fullName>
    <formula>First_Name__c  &amp; IF( ISBLANK(First_Name__c),&quot;&quot;,&quot; &quot;) &amp;  Middle_Name__c  &amp; IF( ISBLANK(Middle_Name__c),&quot;&quot;,&quot; &quot;)  &amp;  Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Collateral Full Name</label>
    <type>Text</type>
</CustomField>