force-app/main/default/objects/Collateral__c/fields/Prefix__c.field-meta.xml
<CustomField>
    <fullName>Prefix__c</fullName>
    <label>Prefix</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dr.</fullName>
            </value>
            <value>
                <fullName>Master</fullName>
            </value>
            <value>
                <fullName>Miss</fullName>
            </value>
            <value>
                <fullName>Mr.</fullName>
            </value>
            <value>
                <fullName>Mrs.</fullName>
            </value>
            <value>
                <fullName>Ms.</fullName>
            </value>
            <value>
                <fullName>Prof</fullName>
            </value>
            <value>
                <fullName>Invalid</fullName>
                <isActive>false</isActive>
                <label>Invalid</label>
            </value>
            <value>
                <fullName>Missing</fullName>
                <isActive>false</isActive>
                <label>Missing</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>