force-app/main/default/objects/Collateral__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Administrative Staff</fullName>
            </value>
            <value>
                <fullName>Alleged Maltreator</fullName>
            </value>
            <value>
                <fullName>APGRB Attorney</fullName>
            </value>
            <value>
                <fullName>Attorney</fullName>
            </value>
            <value>
                <fullName>Attorney General</fullName>
            </value>
            <value>
                <fullName>Caretaker-Caregiver</fullName>
            </value>
            <value>
                <fullName>Child Advocate - CASA</fullName>
            </value>
            <value>
                <fullName>Child Welfare Staff</fullName>
            </value>
            <value>
                <fullName>Clergy</fullName>
            </value>
            <value>
                <fullName>Client Attorney</fullName>
            </value>
            <value>
                <fullName>Counselor-Therapist</fullName>
            </value>
            <value>
                <fullName>Day Care Staff</fullName>
            </value>
            <value>
                <fullName>Decision Maker</fullName>
            </value>
            <value>
                <fullName>Detention Center</fullName>
            </value>
            <value>
                <fullName>Doctor</fullName>
            </value>
            <value>
                <fullName>Emergency Shelter</fullName>
            </value>
            <value>
                <fullName>Ex-Spouse</fullName>
            </value>
            <value>
                <fullName>FIM-Assigned Caseworker/Supervisor</fullName>
            </value>
            <value>
                <fullName>FIM-Facilitator</fullName>
            </value>
            <value>
                <fullName>FIM-Non-assigned casewoker/supervisor</fullName>
            </value>
            <value>
                <fullName>Foster Parent</fullName>
            </value>
            <value>
                <fullName>Foster Sibling</fullName>
            </value>
            <value>
                <fullName>Friend</fullName>
            </value>
            <value>
                <fullName>Godparent</fullName>
            </value>
            <value>
                <fullName>Government Agency</fullName>
            </value>
            <value>
                <fullName>Grandfather</fullName>
            </value>
            <value>
                <fullName>Grandmother</fullName>
            </value>
            <value>
                <fullName>Guardian Ad Litem</fullName>
            </value>
            <value>
                <fullName>Guardian of Person</fullName>
            </value>
            <value>
                <fullName>Guardian of Property</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>