force-app/main/default/objects/Collateral__c/fields/Suffix__c.field-meta.xml
<CustomField>
    <fullName>Suffix__c</fullName>
    <label>Suffix</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>I</fullName>
            </value>
            <value>
                <fullName>II</fullName>
            </value>
            <value>
                <fullName>III</fullName>
            </value>
            <value>
                <fullName>IV</fullName>
            </value>
            <value>
                <fullName>Jr.</fullName>
            </value>
            <value>
                <fullName>Ret.</fullName>
            </value>
            <value>
                <fullName>Sr.</fullName>
            </value>
            <value>
                <fullName>V</fullName>
            </value>
            <value>
                <fullName>Invalid</fullName>
                <isActive>false</isActive>
                <label>Invalid</label>
            </value>
            <value>
                <fullName>Missing</fullName>
                <isActive>false</isActive>
                <label>Missing</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>